--- a/src/main/resources/messages/message_en.properties
+++ b/src/main/resources/messages/message_en.properties
@@ -15,7 +15,7 @@ join.email=EMAIL
 join.name=NAME
 join.captcha=HUMAN VERIFICATION
 join.submit=JOIN
-join.reset=RESET
+join.reset=Cancle
 
 
 #\uc0c1\ub2e8\uba54\ub274
@@ -51,7 +51,7 @@ tmenu.qna.read.modify=Modify
 tmenu.qna.read.delete=Delete
 
 tmenu.qna.modify.submit=modify
-tmenu.qna.modify.reset=reset
+tmenu.qna.modify.reset=cancle
 
 tmenu.qna.write.write=write
 tmenu.qna.write.reset=reset
